Support for connecting to Hue with different types of lights.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,6 +281,7 @@ set(ARDUINO_LIBRARY_Zigbee_SRCS
   libraries/Zigbee/src/ZigbeeEP.cpp
   libraries/Zigbee/src/ZigbeeHandlers.cpp
   libraries/Zigbee/src/ep/ZigbeeColorDimmableLight.cpp
+  libraries/Zigbee/src/ep/ZigbeeHueLight.cpp
   libraries/Zigbee/src/ep/ZigbeeColorDimmerSwitch.cpp
   libraries/Zigbee/src/ep/ZigbeeDimmableLight.cpp
   libraries/Zigbee/src/ep/ZigbeeLight.cpp
